--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ ul {
 img {
     width: 100%;
 }
+h3 {
+    font-size: 26px;
+    font-weight: 300;
+}
 h4 {
     color: #00ed82;
     font-size: 13px;
@@ -47,10 +51,26 @@ h4 {
 .btn-cta:hover {
     opacity: 0.8;
 }
+.btn-outline {
+    background: none;
+    color: #fff;
+    border: 2px solid #fff;
+}
+.btn-outline:hover {
+    color: #fff;
+    border-color: #ccc;
+}
 .legal-text {
     font-size: 10px;
     color: #ccc;
     margin-top: 20px;
+}
+.sub-link {
+    display: block;
+    color: #ccc;
+    font-size: 12px;
+    margin-top: 5px;
+    text-decoration: underline;
 }
 
 
@@ -95,6 +115,22 @@ h4 {
     font-size: 18px;
     margin: 25px 0;
 }
+/* Sub Header */
+.sub-header {
+    display: grid;
+    grid-template-columns: 2fr 4fr 2fr;
+    gap: 40px;
+    align-items: center;
+    padding: 30px 40px;
+    background: linear-gradient(318.68deg, #0f495c 0%, #0d3640 49.72%, #08141f 100%);
+}
+.sub-header > div:last-of-type {
+    justify-self: end;
+    align-items: end;
+}
+.sub-header > div:last-of-type .sub-link {
+    text-align: center;
+}
 /* Media Queries */
 @media (max-width: 768px) {
     .header .logo {
@@ -103,5 +139,24 @@ h4 {
     .header .header-content {
         text-align: center;
         padding: 0 20px;
+    }
+    .header .header-text-1 {
+        margin-bottom: 40px;
+    }
+    .header .header-text-2 {
+        display: none;
+    }
+    .sub-header {
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 20px;
+    }
+    .sub-header img {
+        width: 250px;
+        margin: auto;
+    }
+    .sub-header > div:last-of-type {
+        justify-self: center;
+        align-self: centers;
     }
 }
