--- a/style.css
+++ b/style.css
@@ -200,7 +200,63 @@ h4 {
 .categories .cover-4 {
     background: url(cover-4.jpg) no-repeat center center / cover;
 }
+/* Live */
+.live {
+    background: #151516;
+    padding: 40px;
+}
+.live-border {
+    border: 4px solid #1ce783;
+    border-radius: 16px;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.live a {
+    text-transform: uppercase;
+    font-size: 18px;
+    margin-top: 20px;
+    text-decoration: underline;
+}
+/* Live Sports */
+.live-sports {
+    background: url(live-sports.jpg) no-repeat center center / cover;
+    height: 800px;
+    position: relative;
+}
+.live-sports-content {
+    position: absolute;
+    top: 160px;
+    left: 100px;
+    max-width: 550px;
+}
+.live-sports-logos {
+    width: 300px;
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.live-sports-logos > div {
+    background: url(network-logo-bg.png) no-repeat center center / cover;
+    height: 60px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.live-sports-logos img {
+    width: 40px;
+}
 /* Media Queries */
+@media (max-width: 1100px) {
+    .categories .covers {
+        grid-template-columns: 1fr 1fr;
+    }
+}
 @media (max-width: 768px) {
     .header .logo {
         width: 200px;
@@ -239,4 +295,8 @@ h4 {
     .categories .covers {
         grid-template-columns: 1fr;
     }
+    .live-border {
+        padding: 30px 10px;
+    }
+    
 }
